# lithium

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2020-03-06-055339_links/: down.sql  up.sql
src/: main.rs  schema.rs
src/controller/: hashing.rs  routes.rs  sanitization.rs
src/controller/authentication/: authorization.rs  hashing.rs  login.rs
src/model/: administrator.rs  database.rs  schema.rs
src/view/assets/DataTables/: datatables.css  datatables.js  datatables.min.css  datatables.min.js
src/view/assets/css/: main.css
src/view/assets/js/: main.js  utilities.model.js
src/view/templates/: admin.html.tera  base.html.tera  header.html.tera  home.html.tera  login.html.tera
